feat: Add comprehensive SEO optimization and social media thumbnail - Add custom social media thumbnail with brand styling - Implement Open Graph and Twitter Card meta tags - Add structured data for rich search results - Create sitemap.xml and robots.txt - Add PWA manifest and automated thumbnail generation

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "npm run generate-thumbnail && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-thumbnail": "node scripts/generate-thumbnail.js"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -42,6 +43,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "puppeteer": "^23.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
